--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,7 @@ jobs:
       with:
         host: ${{ secrets.HOST }}
         username: ${{ secrets.USERNAME }}
-        key: ${{ secrets.VPS_PASSWORD }}
+        password: ${{ secrets.VPS_PASSWORD }}
         script: |
           cd /stockpitcherapi
           git pull
