--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,7 @@ jobs:
         username: ${{ secrets.USERNAME }}
         password: ${{ secrets.VPS_PASSWORD }}
         script: |
-          cd /stockpitcherapi
+          cd stockpitcherapi
           git pull
           source venv/bin/activate
           pip install -r requirements.txt
