--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,4 +23,4 @@ jobs:
           git pull
           source venv/bin/activate
           pip install -r requirements.txt
-          sudo systemctl restart stockpitcher.service
+          echo ${{ secrets.VPS_PASSWORD }} | sudo -S sudo systemctl restart stockpitcher.service
