--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ attrs==23.2.0
 beautifulsoup4==4.12.3
 blinker==1.7.0
 bs4==0.0.2
+celery~=5.4.0
 certifi==2023.11.17
 charset-normalizer==3.3.2
 click==8.1.7
