--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ itsdangerous==2.1.2
 Jinja2==3.1.3
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
+matplotlib~=3.9.0
 mdurl==0.1.2
 numpy==1.26.3
 openpyxl==3.1.2
