--- a/requirements.txt
+++ b/requirements.txt
@@ -1,48 +1,244 @@
+ace_tools==0.0
+alabaster==0.7.16
+amqp==5.2.0
+anyio==4.4.0
+applaunchservices==0.3.0
+appnope==0.1.4
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
+arrow==1.3.0
+astroid==3.2.2
+asttokens==2.4.1
+async-lru==2.0.4
+atomicwrites==1.4.1
 attrs==23.2.0
+autopep8==2.0.4
+Babel==2.15.0
 beautifulsoup4==4.12.3
+billiard==4.2.0
+binaryornot==0.4.4
+black==24.4.2
+bleach==6.1.0
 blinker==1.7.0
 bs4==0.0.2
-celery~=5.4.0
-certifi==2023.11.17
+cachetools==5.5.0
+celery==5.4.0
+certifi==2024.8.30
+cffi==1.16.0
+chardet==5.2.0
 charset-normalizer==3.3.2
 click==8.1.7
+click-didyoumean==0.3.1
+click-plugins==1.1.1
+click-repl==0.3.0
+cloudpickle==3.0.0
+coloredlogs==15.0.1
+comm==0.2.2
+cookiecutter==2.6.0
+cssutils==2.11.1
+debugpy==1.8.2
+decorator==5.1.1
+defusedxml==0.7.1
+diff-match-patch==20230430
+dill==0.3.8
+docstring-to-markdown==0.15
+docutils==0.21.2
 et-xmlfile==1.1.0
+executing==2.0.1
+fastjsonschema==2.20.0
+flake8==7.0.0
 Flask==3.0.2
+Flask-Cors==5.0.0
 Flask-SQLAlchemy==3.1.1
-frozendict==2.4.0
+fqdn==1.5.1
+frozendict==2.4.4
+google-ai-generativelanguage==0.6.6
+google-api-core==2.19.2
+google-api-python-client==2.143.0
+google-auth==2.34.0
+google-auth-httplib2==0.2.0
+google-generativeai==0.7.2
+googleapis-common-protos==1.65.0
 greenlet==3.0.3
+grpcio==1.66.1
+grpcio-status==1.62.3
 h11==0.14.0
+httpcore==1.0.5
+httplib2==0.22.0
+httpx==0.27.0
+humanfriendly==10.0
 idna==3.6
+imagesize==1.4.1
+importlib_metadata==8.0.0
+inflection==0.5.1
+intervaltree==3.1.0
+ipykernel==6.29.5
+ipython==8.26.0
+isoduration==20.11.0
+isort==5.13.2
 itsdangerous==2.1.2
+jaraco.classes==3.4.0
+jaraco.context==5.3.0
+jaraco.functools==4.0.1
+jedi==0.19.1
+jellyfish==1.0.4
 Jinja2==3.1.3
+json5==0.9.25
+jsonpointer==3.0.0
+jsonschema==4.22.0
+jsonschema-specifications==2023.12.1
+jupyter-events==0.10.0
+jupyter-lsp==2.2.5
+jupyter_client==8.6.2
+jupyter_core==5.7.2
+jupyter_server==2.14.1
+jupyter_server_terminals==0.5.3
+jupyterlab==4.2.3
+jupyterlab_pygments==0.3.0
+jupyterlab_server==2.27.2
+keyring==25.2.1
+kombu==5.3.7
+loguru==0.7.2
+lxml==5.2.2
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
-matplotlib~=3.9.0
+matplotlib-inline==0.1.7
+mccabe==0.7.0
 mdurl==0.1.2
+mistune==3.0.2
+more-itertools==10.3.0
+mypy-extensions==1.0.0
+nbclient==0.10.0
+nbconvert==7.16.4
+nbformat==5.10.4
+nest-asyncio==1.6.0
+notebook==7.2.1
+notebook_shim==0.2.4
 numpy==1.26.3
+numpydoc==1.7.0
 openpyxl==3.1.2
 outcome==1.3.0.post0
+overrides==7.7.0
 packaging==23.2
-pandas==1.5.3
+pandas==2.2.2
+pandocfilters==1.5.1
+parso==0.8.4
+pathspec==0.12.1
+pexpect==4.9.0
+pickleshare==0.7.5
+platformdirs==4.2.2
+pluggy==1.5.0
+prometheus_client==0.20.0
+prompt-toolkit==3.0.43
+proto-plus==1.24.0
+protobuf==4.25.4
+psutil==6.0.0
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
+pycodestyle==2.11.1
+pycparser==2.22
 pydantic==1.10.13
+pydocstyle==6.3.0
+pyflakes==3.2.0
 pyfredapi==0.8.0
 Pygments==2.17.2
+pylint==3.2.5
+pylint-venv==3.0.3
+pyls-spyder==0.4.0
+pyobjc-core==10.3.1
+pyobjc-framework-Cocoa==10.3.1
+pyobjc-framework-CoreServices==10.3.1
+pyobjc-framework-FSEvents==10.3.1
+pyparsing==3.1.4
+PyQt5==5.15.10
+PyQt5-Qt5==5.15.14
+PyQt5-sip==12.13.0
+PyQtWebEngine==5.15.6
+PyQtWebEngine-Qt5==5.15.14
+pyrate-limiter==3.6.1
 PySocks==1.7.1
 python-dateutil==2.8.2
 python-dotenv==1.0.1
+python-json-logger==2.0.7
+python-lsp-black==2.0.0
+python-lsp-jsonrpc==1.1.2
+python-lsp-server==1.11.0
+python-slugify==8.0.4
+pytoolconfig==1.3.1
 pytz==2023.3.post1
+PyYAML==6.0.1
+pyzmq==26.0.3
+QDarkStyle==3.2.3
+qstylizer==0.2.3
+QtAwesome==1.3.1
+qtconsole==5.5.2
+QtPy==2.4.1
+redis==5.0.4
+referencing==0.35.1
 requests==2.31.0
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
 rich==13.7.0
+rope==1.13.0
+rpds-py==0.18.1
+rsa==4.9
+Rtree==1.2.0
+sec-downloader==0.11.1
+sec-edgar-downloader==5.0.2
+sec-parser==0.58.1
 selenium==4.17.2
+Send2Trash==1.8.3
+setuptools==70.2.0
 six==1.16.0
 sniffio==1.3.0
+snowballstemmer==2.2.0
 sortedcontainers==2.4.0
 soupsieve==2.5
+Sphinx==7.3.7
+sphinxcontrib-applehelp==1.0.8
+sphinxcontrib-devhelp==1.0.6
+sphinxcontrib-htmlhelp==2.0.5
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.7
+sphinxcontrib-serializinghtml==1.1.10
+spyder==5.5.5
+spyder-kernels==2.5.2
+spyder-terminal==1.2.2
 SQLAlchemy==2.0.29
+stack-data==0.6.3
+tabulate==0.9.0
+terminado==0.18.1
+text-unidecode==1.3
+textdistance==4.6.2
+three-merge==0.1.1
+tinycss2==1.3.0
+tomli==2.0.1
+tomlkit==0.12.5
+tornado==6.4.1
+tqdm==4.66.5
+traitlets==5.14.3
 trio==0.24.0
 trio-websocket==0.11.1
+types-python-dateutil==2.9.0.20240316
 typing_extensions==4.9.0
+tzdata==2024.1
+ujson==5.10.0
+uri-template==1.3.0
+uritemplate==4.1.1
 urllib3==2.1.0
+vine==5.1.0
+watchdog==4.0.1
+wcwidth==0.2.13
+webcolors==24.6.0
 webdriver-manager==4.0.1
+webencodings==0.5.1
+websocket-client==1.8.0
 Werkzeug==3.0.2
+whatthepatch==1.0.5
 wsproto==1.2.0
+wurlitzer==3.1.1
+xxhash==3.4.1
+yapf==0.40.2
+zipp==3.19.2
