--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ ace_tools==0.0
 alabaster==0.7.16
 amqp==5.2.0
 anyio==4.4.0
-applaunchservices==0.3.0
+applaunchservices==0.3.0; sys_platform == "darwin"
 appnope==0.1.4
 argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
@@ -34,12 +34,10 @@ click-repl==0.3.0
 cloudpickle==3.0.0
 coloredlogs==15.0.1
 comm==0.2.2
-cookiecutter==2.6.0
 cssutils==2.11.1
 debugpy==1.8.2
 decorator==5.1.1
 defusedxml==0.7.1
-diff-match-patch==20230430
 dill==0.3.8
 docstring-to-markdown==0.15
 docutils==0.21.2
@@ -87,16 +85,6 @@ json5==0.9.25
 jsonpointer==3.0.0
 jsonschema==4.22.0
 jsonschema-specifications==2023.12.1
-jupyter-events==0.10.0
-jupyter-lsp==2.2.5
-jupyter_client==8.6.2
-jupyter_core==5.7.2
-jupyter_server==2.14.1
-jupyter_server_terminals==0.5.3
-jupyterlab==4.2.3
-jupyterlab_pygments==0.3.0
-jupyterlab_server==2.27.2
-keyring==25.2.1
 kombu==5.3.7
 loguru==0.7.2
 lxml==5.2.2
@@ -144,27 +132,16 @@ pydocstyle==6.3.0
 pyflakes==3.2.0
 pyfredapi==0.8.0
 Pygments==2.17.2
-pylint==3.2.5
-pylint-venv==3.0.3
-pyls-spyder==0.4.0
 pyobjc-core==10.3.1; sys_platform == "darwin"
-pyobjc-framework-Cocoa==10.3.1
-pyobjc-framework-CoreServices==10.3.1
-pyobjc-framework-FSEvents==10.3.1
+pyobjc-framework-Cocoa==10.3.1; sys_platform == "darwin"
+pyobjc-framework-CoreServices==10.3.1; sys_platform == "darwin"
+pyobjc-framework-FSEvents==10.3.1; sys_platform == "darwin"
 pyparsing==3.1.4
-PyQt5==5.15.10
-PyQt5-Qt5==5.15.14
-PyQt5-sip==12.13.0
-PyQtWebEngine==5.15.6
-PyQtWebEngine-Qt5==5.15.14
 pyrate-limiter==3.6.1
 PySocks==1.7.1
 python-dateutil==2.8.2
 python-dotenv==1.0.1
 python-json-logger==2.0.7
-python-lsp-black==2.0.0
-python-lsp-jsonrpc==1.1.2
-python-lsp-server==1.11.0
 python-slugify==8.0.4
 pytoolconfig==1.3.1
 pytz==2023.3.post1
@@ -196,16 +173,6 @@ sniffio==1.3.0
 snowballstemmer==2.2.0
 sortedcontainers==2.4.0
 soupsieve==2.5
-Sphinx==7.3.7
-sphinxcontrib-applehelp==1.0.8
-sphinxcontrib-devhelp==1.0.6
-sphinxcontrib-htmlhelp==2.0.5
-sphinxcontrib-jsmath==1.0.1
-sphinxcontrib-qthelp==1.0.7
-sphinxcontrib-serializinghtml==1.1.10
-spyder==5.5.5
-spyder-kernels==2.5.2
-spyder-terminal==1.2.2
 SQLAlchemy==2.0.29
 stack-data==0.6.3
 tabulate==0.9.0
